# botc

./: .gitignore  .hgignore  95bot.botc  CMakeLists.txt  LICENSE.txt  Makefile  array.h  botc_defs.bts  botcommands.h  chasebot.botc  commands.cxx  commands.def  commands.h  common.h  crashbot.botc  databuffer.h  events.cxx  events.def  events.h  main.cxx  objwriter.cxx  objwriter.h  oreobot.botc  parser.cxx  parser.h  preprocessor.cxx  scriptreader.cxx  scriptreader.h  str.cxx  str.h  stringtable.cxx  stringtable.h  variables.cxx  variables.h
.circleci/: config.yml
namedenums/: CMakeLists.txt  NamedEnumerations.cc  namedenums.cpp
src/: BotStuff.h  Commands.cc  Commands.h  Containers.h  DataBuffer.cc  DataBuffer.h  Events.cc  Events.h  Expression.cc  Expression.h  Format.cc  Format.h  Lexer.cc  Lexer.h  LexerScanner.cc  LexerScanner.h  Macros.h  Main.cc  Main.h  Parser.cc  Parser.h  Property.h  String.cc  String.h  StringTable.cc  StringTable.h  Tokens.h  Types.h  Variables.cc  Variables.h  array.h  botStuff.h  botcommands.h  bots.h  botstuff.h  commandline.cpp  commandline.h  commands.cc  commands.cpp  commands.cxx  (+60 more)
updaterevision/: CMakeLists.txt  updaterevision.c
