cmake_minimum_required (VERSION 2.4)
add_executable (namedenums namedenums.cpp)

set_target_properties(namedenums PROPERTIES CXX_STANDARD 17)
if (MSVC)
    target_compile_options(namedenums PRIVATE /Zc:__cplusplus /permissive-)
endif()
if (NOT MSVC)
    target_compile_options(namedenums PRIVATE -W -Wall)
endif()
